# Mandraker-indie-studio-2022

./: .gitignore  CMakeLists.txt  README.md  main.cpp
assets/map/: map.txt
assets/models/bag/: bag.mtl
assets/models/flitwick/: flitwick.blend  flitwick.iqm
assets/models/gloves/: gloves.mtl
assets/models/gnome/: gnome.iqm
assets/models/greathall/: greathall.mtl
assets/models/mandrake/: mandrake.iqm
assets/models/mcg/: mcg.blend  mcg.iqm
assets/models/pot/: pot.mtl
assets/models/shoes/: shoes.mtl
assets/models/snape/: snape.blend  snape.iqm
assets/models/sprout/: sprout.blend  sprout.iqm
assets/models/table/: table.mtl
assets/models/trelawney/: trelawney.blend  trelawney.iqm
assets/models/watering_can/: wateringCan.mtl
cmake/: FindJsonCpp.cmake  Findraylib.cmake
cross_platform/: CMakeLists.txt
includes/: ecs.hpp  extern.hpp  powerUp.hpp  raylib.hpp
src/: Error.cpp  Error.hpp  main.cpp
src/Engine/: Engine.cpp  Engine.hpp
src/Engine/Chrono/: Chrono.cpp  Chrono.hpp
src/Engine/Save/: Save.cpp  Save.hpp
src/Example/: Example.cpp  Example.hpp
src/Scene/: Scene.hpp
src/Scene/CharacterSelector/: CharacterSelector.cpp  CharacterSelector.hpp  NbPlayer.cpp  NbPlayer.hpp
src/Scene/Game/: Game.cpp  Game.hpp
src/Scene/GameOver/: GameOver.cpp  GameOver.hpp
src/Scene/GameSettings/: GameSettings.cpp  GameSettings.hpp
src/Scene/Menu/: Menu.cpp  Menu.hpp
src/Scene/Settings/: Settings.cpp  Settings.hpp
src/Scene/SplashScreen/: SplashScreen.cpp  SplashScreen.hpp
src/Tools/: Button.cpp  Button.hpp
src/ecs/Components/: Components.cpp  Components.hpp
src/ecs/Components/Animable/: Animable.cpp  Animable.hpp
src/ecs/Components/Boundable/: Boundable.cpp  Boundable.hpp
src/ecs/Components/Breakable/: Breakable.cpp  Breakable.hpp
src/ecs/Components/CameraComponent/: CameraComponent.cpp  CameraComponent.hpp
src/ecs/Components/Clickable/: Clickable.cpp  Clickable.hpp  ClickableActionType.hpp
src/ecs/Components/Collisionable/: Collisionable.cpp  Collisionable.hpp
src/ecs/Components/Drawable/: Drawable.cpp  Drawable.hpp  DrawableCube.cpp  DrawableCube.hpp  DrawableCubeTexture.cpp  DrawableCubeTexture.hpp  DrawableModel.cpp  DrawableModel.hpp  DrawablePlane.cpp  DrawablePlane.hpp  DrawableSprite.cpp  DrawableSprite.hpp  DrawableText.cpp  DrawableText.hpp
src/ecs/Components/Hoverable/: Hoverable.cpp  Hoverable.hpp
src/ecs/Components/Loadable/: Loadable.cpp  Loadable.hpp
src/ecs/Components/Movable/: Movable.cpp  Movable.hpp
src/ecs/Components/Musicable/: Musicable.cpp  Musicable.hpp
src/ecs/Components/Placable/: Placable.cpp  Placable.hpp
src/ecs/Components/Playable/: Playable.cpp  Playable.hpp
src/ecs/Components/Soundable/: Soundable.cpp  Soundable.hpp
src/ecs/Components/Timable/: Timable.cpp  Timable.hpp
src/ecs/ConcretComponent/: ConcretComponent.cpp  ConcretComponent.hpp
src/ecs/ECSManager/: ECSManager.cpp  ECSManager.hpp
src/ecs/Entities/: Entities.cpp  Entities.hpp
src/ecs/Entity/: Entity.cpp  Entity.hpp
src/ecs/IComponent/: IComponent.cpp  IComponent.hpp
src/ecs/ISystem/: ISystem.hpp
src/ecs/System/: System.cpp  System.hpp
src/ecs/Systems/Animation/: Animation.cpp  Animation.hpp
src/ecs/Systems/Bomber/: Bomber.cpp  Bomber.hpp
src/ecs/Systems/Draw/: Draw.cpp  Draw.hpp  DrawMode.hpp
src/ecs/Systems/Finish/: Finish.cpp  Finish.hpp
src/ecs/Systems/Gravity/: Gravity.cpp  Gravity.hpp
src/ecs/Systems/Loading/: Loading.cpp  Loading.hpp
src/ecs/Systems/MouseClick/: MouseClick.cpp  MouseClick.hpp
src/ecs/Systems/MouseHover/: MouseHover.cpp  MouseHover.hpp
src/ecs/Systems/Move/: Move.cpp  Move.hpp
src/ecs/Systems/Music_sys/: Music_sys.cpp  Music_sys.hpp
src/ecs/Systems/Player/: Player.cpp  Player.hpp
src/ecs/Systems/Save/: SaveSystem.cpp  SaveSystem.hpp
src/ecs/Systems/Sound/: SoundSystem.cpp  SoundSystem.hpp
src/ecs/Systems/Timer/: Timer.cpp  Timer.hpp
src/raylib_encap/: raylib.cpp
